--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "blackbird",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app/main.js",
+  "name": "rts",
+  "version": "2.0.0",
+  "description": "race tracking system",
+  "main": "src/index.js",
   "scripts": {
     "start": "electron .",
     "update-bin": "node scripts/updatebin.js"
