--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ core/consoleapps/portablereader/portablereader/bin/
 core/consoleapps/portablereader/portablereader/obj/
 core/consoleapps/MainReaderAdapter/MainReaderAdapter/bin/
 core/consoleapps/MainReaderAdapter/MainReaderAdapter/obj/
+dist/
