--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sqlite3": "^3.1.5",
     "electron": "^2.0.7",
     "lodash": "^4.17.10",
+    "sqlite3": "^4.0.9",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   }
