Add database registration methods

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ core/consoleapps/portablereader/portablereader/obj/
 core/consoleapps/MainReaderAdapter/MainReaderAdapter/bin/
 core/consoleapps/MainReaderAdapter/MainReaderAdapter/obj/
 dist/
+database/
