--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ub": "node scripts/updatebin.js",
     "build": "tsc",
     "br": "npm run build && npm start",
+    "test": "jest",
+    "lint": "tslint --project tsconfig.json --config tslint.json",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "start": "electron ./dist/index.js",
@@ -16,12 +18,14 @@
   "dependencies": {
     "@types/sqlite3": "^3.1.5",
     "electron": "^2.0.7",
-    "lodash": "^4.17.10",
     "sqlite3": "^4.0.9",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
-    "electron-builder": "^21.1.5"
+    "@types/jest": "^24.0.18",
+    "electron-builder": "^21.1.5",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.0.2"
   }
 }
