--- a/package.json
+++ b/package.json
@@ -17,14 +17,23 @@
   "dependencies": {
     "@types/sqlite3": "^3.1.5",
     "electron": "^2.0.7",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "sqlite3": "^4.0.9",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "@types/jest": "^24.0.18",
+    "babel-loader": "^8.0.6",
     "electron-builder": "^21.1.5",
     "jest": "^24.9.0",
-    "ts-jest": "^24.0.2"
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.4",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   }
 }
