--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "electron": "^2.0.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "sqlite3": "^4.0.9",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
