Add raceinfo without tme and antd styles

--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "race tracking system",
   "scripts": {
     "ub": "node scripts/updatebin.js",
+    "cih": "node scripts/copy-index-html.js",
     "build": "tsc",
     "br": "npm run build && npm start",
     "test": "jest",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "watch": "tsc -w",
-    "start": "webpack && electron ./dist/index.js",
-    "start-old": "OLD_VIEW=true electron ./dist/index.js",
     "watch": "webpack",
+    "start": "npm run cih && webpack && electron ./dist/index.js",
+    "start-old": "OLD_VIEW=true electron ./dist/index.js",
     "postinstall": "install-app-deps"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/sqlite3": "^3.1.5",
+    "antd": "^3.23.2",
     "electron": "^2.0.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
