--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "watch": "webpack",
     "start": "npm run cih && webpack && electron ./dist/index.js",
-    "start-old": "OLD_VIEW=true electron ./dist/index.js",
     "postinstall": "install-app-deps"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/sqlite3": "^3.1.5",
     "antd": "^3.23.2",
+    "dotenv": "^8.1.0",
     "electron": "^2.0.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
