--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "electron-builder": "^21.1.5",
+    "file-loader": "^4.2.0",
     "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
   }
