--- a/package.json
+++ b/package.json
@@ -2,50 +2,65 @@
   "name": "rts",
   "version": "2.0.0",
   "description": "race tracking system",
+  "main": "src/electron-start.js",
   "scripts": {
     "ub": "node scripts/updatebin.js",
     "cih": "node scripts/copy-index-html.js",
-    "build": "tsc",
-    "br": "npm run build && npm run vr && npm start",
     "test": "jest",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "electron ./dist/index.js",
-    "vr": "webpack && npm start",
-    "postinstall": "install-app-deps"
+    "electron": "electron .",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "dev": "nf start -p 3000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/sqlite3": "^3.1.5",
     "antd": "^3.23.2",
     "dotenv": "^8.1.0",
     "electron": "^2.0.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
+    "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "sqlite3": "^4.0.9",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/sqlite3": "^3.1.5",
     "electron-builder": "^21.1.5",
-    "file-loader": "^4.2.0",
-    "jest": "^24.9.0",
+    "foreman": "^3.0.1",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.4",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "ts-jest": "^24.0.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/*.{ts,tsx}",
+      "!src/definitions/**/*.{ts,tsx}",
+      "!**/node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 0,
+        "functions": 0,
+        "lines": 0,
+        "statements": 0
+      }
+    }
+  },
+  "browserslist": {
+    "production": [
+      "last 1 chrome version"
+    ],
+    "development": [
+      "last 1 chrome version"
+    ]
   }
 }
