--- a/package.json
+++ b/package.json
@@ -18,28 +18,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "antd": "^3.23.2",
-    "dotenv": "^8.1.0",
-    "electron": "^2.0.7",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
+    "antd": "3.23.2",
+    "dotenv": "8.1.0",
+    "electron": "2.0.7",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-redux": "7.1.1",
     "react-scripts": "3.1.1",
-    "redux": "^4.0.4",
-    "sqlite3": "^4.0.9",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "redux": "4.0.4",
+    "sqlite3": "4.0.9",
+    "tslint": "5.18.0",
+    "typescript": "3.5.3"
   },
   "devDependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/jest": "^24.0.18",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.2",
-    "@types/sqlite3": "^3.1.5",
-    "electron-builder": "^21.1.5",
-    "foreman": "^3.0.1",
-    "node-sass": "^4.12.0",
-    "ts-jest": "^24.0.2"
+    "@types/dotenv": "6.1.1",
+    "@types/jest": "24.0.18",
+    "@types/react-dom": "16.9.0",
+    "@types/react-redux": "7.1.2",
+    "@types/sqlite3": "3.1.5",
+    "electron-builder": "21.1.5",
+    "foreman": "3.0.1",
+    "node-sass": "4.12.0",
+    "ts-jest": "24.0.2"
   },
   "jest": {
     "collectCoverageFrom": [
