Refactor reader settings to Blueprintsjs

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@blueprintjs/core": "3.18.1",
     "antd": "3.23.2",
     "dotenv": "8.1.0",
     "electron": "2.0.7",
