--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.9.0",
     "react-redux": "7.1.1",
     "react-scripts": "3.1.1",
+    "recharts": "^1.8.3",
     "redux": "4.0.4",
     "sqlite3": "4.0.9",
     "tslint": "5.18.0",
