--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@blueprintjs/icons": "^3.10.0",
     "@blueprintjs/select": "^3.10.0",
     "antd": "3.23.2",
+    "chart.xkcd-react": "0.0.6",
     "electron": "2.0.7",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-redux": "7.1.1",
     "react-scripts": "3.1.1",
-    "recharts": "^1.8.3",
     "redux": "4.0.4",
     "sqlite3": "4.0.9",
     "tslint": "5.18.0",
