--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "author": "lapkoshka",
   "build": {
-      "appId": "rts.id",
-      "files": [
-          "build/**/*",
-          "node_modules/**/*"
-      ],
-      "win": {
-          "target": "NSIS",
-          "icon": "build/icon.ico"
-      }
+    "appId": "rts.id",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "win": {
+      "target": "NSIS",
+      "icon": "build/icon.ico"
+    }
   },
   "license": "ISC",
   "dependencies": {
@@ -38,6 +38,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-redux": "7.1.1",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.1.1",
     "redux": "4.0.4",
     "sqlite3": "4.0.9",
