--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "strict": false,
     "outDir": "build"
   },
