--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,8 +5,8 @@
     "sourceMap": true,
     "outDir": "build/server",
     "baseUrl": "src",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "paths": {
       "*": ["node_modules/*"]
     },
