--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-dom": "16.9.0",
     "react-redux": "7.1.1",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "3.3.0",
     "redux": "4.0.4",
     "sqlite3": "4.0.9",
     "typescript": "3.5.3"
@@ -49,6 +49,7 @@
     "@types/jest": "24.0.18",
     "@types/react-dom": "16.9.0",
     "@types/react-redux": "7.1.2",
+    "@types/react-router-dom": "5.1.3",
     "@types/sqlite3": "3.1.5",
     "electron": "2.0.7",
     "electron-builder": "21.1.5",
