--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
         "react/display-name": "off",
         "@typescript-eslint/no-unused-vars": ["error"],
         "@typescript-eslint/explicit-function-return-type": "off",
-        "@typescript-eslint/explicit-member-accessibility": "off"
+        "@typescript-eslint/explicit-member-accessibility": "off",
+        "@typescript-eslint/camelcase": "off"
     },
     "settings": {
         "react": {
