--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "noImplicitAny": true,
     "sourceMap": true,
-    "outDir": "build/server",
+    "outDir": "build",
     "baseUrl": "src",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
