--- a/.eslintrc
+++ b/.eslintrc
@@ -12,11 +12,12 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "project": "tsconfig.json",
+        "project": ["tsconfig.json", "tsconfig.server.json"],
         "tsconfigRootDir": "."
     },
     "plugins": ["jest", "react"],
     "rules": {
+        "semi": "error",
         "no-console": "off",
         "react/prop-types": "off",
         "react/display-name": "off",
