--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,34 @@
 {
-  "compilerOptions": {
-    "baseUrl": "src",
-    "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es5",
-      "es2015",
-      "es2016",
-      "es2017"
+    "extends": "./tsconfig.base",
+    "compilerOptions": {
+        "module": "esnext",
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext",
+            "es5",
+            "es2015",
+            "es2016",
+            "es2017"
+        ],
+        "noImplicitAny": false,
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": false,
+        "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "downlevelIteration": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "preserve",
+        "strict": false,
+    },
+    "include": [
+        "src/client"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "downlevelIteration": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "preserve",
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "strict": false,
-    "outDir": "build"
-  },
-  "include": [
-    "src/client",
-  ],
-  "exclude": [
-    "src/server"
-  ]
+    "exclude": [
+        "src/server"
+    ]
 }
