--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,21 +1,14 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitAny": true,
-    "sourceMap": true,
-    "outDir": "build",
-    "baseUrl": "src",
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "paths": {
-      "*": ["node_modules/*"]
+    "extends": "./tsconfig.base.json",
+    "compilerOptions": {
+        "paths": {
+            "*": ["node_modules/*"]
+        },
     },
-    "target": "es6"
-  },
-  "include": [
-    "src/server"
-  ],
-  "exclude": [
-    "src/client"
-  ]
+    "include": [
+        "src/server"
+    ],
+    "exclude": [
+        "src/client"
+    ]
 }
